--- a/blog.html
+++ b/blog.html
@@ -728,14 +728,14 @@ i will always prefer a safe & organized space for talking, especially for giving
 please, let me know if i can help, and i will do my best !!
 i check my inbox frequently ( though i might still take some time to respond depending on how clogged it is ) , and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
-<sub>🧷</sub> i am always open for new pen pals from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items <sub>💌</sub>
+<sub>🧷</sub> i am also open for <font color="#bfa8a8">real life pen pals</font> from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items <sub>💌</sub>
+if interested, please let me know by email !
 
-<sub>🧷</sub> i respond to my fluffy life pupu mails too, but please don't talk about serious things in there, use the contact form instead !!
-( i don't check my pupu mail inbox as frequently and it gets messy )
+<sub>🧷</sub> i respond to <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't talk about serious things in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!
 
-<sub>🧷</sub> i can share my private discord tag & line id with friends, and with those who want to become friends, after exchanging a few emails. i do prefer email and letter exchanging though, as i prefer writing long messages !
+<sub>🧷</sub> in the future, you can expect to be able to interact with me on <font color="#bfa8a8">my puf cafe pages</font> as well, of course.
 
-<sub>🧷</sub> in the future, you can expect to be able to interact with me on my puf café pages as well, of course.
+<sub>🧷</sub> i can share my private discord tag & line id with friends. i do prefer a slower message exchanging though, as i like to write long messages !
 
 
 
