--- a/faq.html
+++ b/faq.html
@@ -704,14 +704,15 @@ i will always prefer a safe & organized space for talking, especially for giving
 please, let me know if i can help, and i will do my best !!
 i check my inbox frequently ( though i might still take some time to respond depending on how clogged it is ) , and i like to talk about all kinds of things through email, it's very comfortable .. like exchanging virtual letters <font color="#d3a5a5" style="font-size:11px;">♡</font>
 
-<sub>🧷</sub> i am always open for new pen pals from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items <sub>💌</sub>
+<sub>🧷</sub> i am also open for <font color="#bfa8a8">real life pen pals</font> from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items <sub>💌</sub>
+if interested, please let me know by email !
 
-<sub>🧷</sub> i respond to my fluffy life pupu mails too, but please don't talk about serious things in there, use the contact form instead !!
-( i don't check my pupu mail inbox as frequently and it gets messy )
+<sub>🧷</sub> i respond to <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't talk about serious things in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!
 
-<sub>🧷</sub> i can share my private discord tag & line id with friends, and with those who want to become friends, after exchanging a few emails. i do prefer email and letter exchanging though, as i prefer writing long messages !
+<sub>🧷</sub> in the future, you can expect to be able to interact with me on <font color="#bfa8a8">my puf cafe pages</font> as well, of course.
 
-<sub>🧷</sub> in the future, you can expect to be able to interact with me on my puf café pages as well, of course.
+<sub>🧷</sub> i can share my private discord tag & line id with friends. i do prefer a slower message exchanging though, as i like to write long messages !
+
 </pre><br><br><br><br><br><br>
 </font>
 
@@ -752,7 +753,7 @@ the child me would be really proud of everything i'm doing right now .. this web
 here i can put together all the things i'm doing, and all the content i like. here i am safe. here i am free to be purely myself.<br><br>
 
 over the next years i continued to create 20+ other websites for my projects : the shy bunny store ( 2018 ) , the poofties club ( 2021 ) , the my fluffy life online game ( 2021 ) .. and many side web pages yearly, that are hosted as "pooftie.me" subdomains, where i create and experiment lots of random things with html & css !<br>
-by 2022 i started to develop my very own social platform, the puf café <font color="#d3a5a5" style="font-size:11px;">♡</font><br>
+by 2022 i started to develop my very own social platform, the puf cafe <font color="#d3a5a5" style="font-size:11px;">♡</font><br>
 a cute & safe place where i can post stuff as i want and have lots of fun interactive things !<br>
 during the process of planning, i decided to invest my time & energy on creating content using the tools i was developing, instead of trying to keep using my social media accounts and achieving unsatisfactory results over and over again.<br>
 i only feel 100% comfortable inside my own websites / games / platforms, or in those that belong to people i trust wholeheartedly, and i finally managed to deactivate all of my accounts and started focusing on things that make me truly happy !!<br>
