--- a/recommended.html
+++ b/recommended.html
@@ -380,7 +380,7 @@ text-decoration: none; color: #ccb1b1; padding-bottom: 1px; border-bottom:1px do
 
 　<br><br><a href="http://www.dollhospital.com.br/" target="_blank"><img width="88px" height="35px" src="http://i.imgur.com/CPLYLD2.png"/></a>
 　<a href="http://theprincesschateau.silentears.net" target="_blank"><img src="https://i.imgur.com/58xmjAn.gif"></a>
-　‌‌<a href="https://luupon.art" target="_blank"><img src="https://i.imgur.com/GKo0nYh.png"></a>　　
+　‌‌<a href="https://arunyi.art" target="_blank"><img src="https://i.imgur.com/7ZYyXXH.png"></a>　　
 
 <br><br><a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
 　<a href="https://mimkitty.com" target="_blank"><img src="https://i.imgur.com/6W5CjTW.gif"></a>
