--- a/help.html
+++ b/help.html
@@ -773,7 +773,7 @@ function getPosition(el) {
 <img src="https://i.imgur.com/Whw2SOT.png"> <font color="#b29372" style="font-size:9px">things that will happen to you :</font><br><br>
 ・ you will find a new song that you can play on repeat when you can't sleep<br>
 ・ new people will come into your life unexpectedly and make everything better<br>
-・ you will get good grades, graduate and find a job that you like<br>
+・ you will eventually find a passion, and a job that you like<br>
 ・ your heart will heal and you'll slowly learn to manage the pain<br>
 ・ good things that will make you very happy to be alive !<br>
 <br>
@@ -835,24 +835,22 @@ function getPosition(el) {
 <br>
 <br><a name="life" id="life"></a><br>
 <img src="https://i.imgur.com/Whw2SOT.png"> <font color="#b29372" style="font-size:9px">small things to improve your life :</font><br><br>
-・ change your bedding each month<br>
-・ wake up early ( at least before 10am )<br>
+・ change your bedding frequently<br>
+・ always wake up early ( at least before 10am )<br>
 ・ spend more time with people you really love<br>
 ・ fairy lights everywhere<br>
 ・ wash your face daily<br>
 ・ moisturize regularly<br>
 ・ bake some healthy treats<br>
 ・ don't wear any make up, at least while you're at home<br>
-・ clean your room at least every two weeks<br>
+・ clean your room at least weekly<br>
 ・ run outside<br>
-・ get a new towel regularly<br>
-・ invest time in cooking awesome meals<br>
+・ change your towel daily<br>
+・ invest time in cooking your meals<br>
 ・ discover new music<br>
 ・ spend less time online<br>
-・ take your vitamins<br>
 ・ eat lots of fruit<br>
 ・ light some scent candles<br>
-・ only go to bed to sleep ( chill on the sofa )<br>
 ・ open your room's windows<br>
 ・ have warm showers ( but not too warm, just comfortable )<br>
 ・ keep a good posture<br>
