--- a/blog.html
+++ b/blog.html
@@ -744,10 +744,10 @@ the answer is : yes, i did make a script for discord as well <sub>🎀</sub>
 at first it was only for inserting css, so i could make it pink .. but recently i updated it for also making the blocked people's messages disappear from the chat, which is nice !
 it doesn't help with all the issues that come with their useless blocking feature, but it's better than nothing, right ?  
 
-so here is my discord web code snippet, in case you fluffies want to try it out ( click the screenshot to get the .txt file ) :</pre>
+so here is my discord web code snippet, in case you fluffies want to try it out ( click the screenshot to get the .js file ) :</pre>
 <br><br>
 
-<center><a href="https://file.pooftie.me/js/dscrd.txt" target="_blank"><img id="dscrd" width="400px" height="auto" src="https://i.imgur.com/LghKMB0.png"></a>
+<center><a href="https://file.pooftie.me/js/dscrd.js" target="_blank"><img id="dscrd" width="400px" height="auto" src="https://i.imgur.com/LghKMB0.png"></a>
         <script type = "text/javascript">
             var imagedscrd = document.getElementById("dscrd");
             var currentPosdscrd = 0;
@@ -768,7 +768,7 @@ so here is my discord web code snippet, in case you fluffies want to try it out 
 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-<center><a id="linkbjinho" href="https://file.pooftie.me/js/dscrdcss.txt" target="_blank">( click here to get the css only version, for betterdiscord )</a></center>
+<center><a id="linkbjinho" href="https://file.pooftie.me/js/dscrd.css" target="_blank">( click here to get the .css version, for betterdiscord )</a></center>
 
 it is a very comfy theme, zero harsh color contrast. i made it to work with the dark theme, but it's alright with the light theme too !
 i did my best to make it cute but also functional, so you can see both white and black stuff.
@@ -1370,11 +1370,11 @@ not only numbers, but also public comments, because i'm tired of seeing unwanted
 if i feel safe enough to see comments on a specific account, from a friend for example, i can simply deactivate the script for that moment !
 i can still like posts normally, comment on them, and check my own notifications so i can respond to people and see who responded me, so it haven't negatively affected my usability on these platforms.
 
-i made scripts for all the social media sites that i am currently using ( click the screenshots to get the .txt files ) :</pre>
+i made scripts for all the social media sites that i am currently using ( click the screenshots to get the .js files ) :</pre>
 <br><br>
 
 <center>
-<a href="https://file.pooftie.me/js/tmblr.txt" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/AqVXPvO.png"/></a>
+<a href="https://file.pooftie.me/js/tmblr.js" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/AqVXPvO.png"/></a>
         <script type = "text/javascript">
             var imagetmblr = document.getElementById("tmblr");
             var currentPostmblr = 0;
@@ -1390,7 +1390,7 @@ i made scripts for all the social media sites that i am currently using ( click 
             setInterval(volgendefototmblr, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/yt.txt" target="_blank" id="linkzinhoinho"><img id="yt" width="400px" height="auto" src="https://i.imgur.com/RJNCZse.png"/></a>
+<a href="https://file.pooftie.me/js/yt.js" target="_blank" id="linkzinhoinho"><img id="yt" width="400px" height="auto" src="https://i.imgur.com/RJNCZse.png"/></a>
         <script type = "text/javascript">
             var imageyt = document.getElementById("yt");
             var currentPosyt = 0;
@@ -1406,7 +1406,7 @@ i made scripts for all the social media sites that i am currently using ( click 
             setInterval(volgendefotoyt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/twt.txt" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/DSmMqN5.png"/></a>
+<a href="https://file.pooftie.me/js/twt.js" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/DSmMqN5.png"/></a>
         <script type = "text/javascript">
             var imagetwt = document.getElementById("twt");
             var currentPostwt = 0;
@@ -1422,7 +1422,7 @@ i made scripts for all the social media sites that i am currently using ( click 
             setInterval(volgendefototwt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/5FvB3pk.png"/></a>
+<a href="https://file.pooftie.me/js/ig.js" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/5FvB3pk.png"/></a>
         <script type = "text/javascript">
             var imageig = document.getElementById("ig");
             var currentPosig = 0;
@@ -1444,7 +1444,7 @@ i made scripts for all the social media sites that i am currently using ( click 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
 as you can see, each one of them has a slightly different appearance ( i customized them very spontaneously ) , but all of them have the metric numbers and public comments hidden, and some other things as well ( such as trending posts ) <sub>🎗</sub>
-i will keep my web code snippets updated whenever needed, and you can always check the latest version on my /portfolio page !
+i will keep my web code snippets updated whenever needed, and you can always check the latest version on my <a style="text-decoration: none;" href="https://middlepot.com/portfolio#webcodesnippets" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">portfolio</font></a> page !
 
 keep in mind that these codes were made by me, thinking on my own needs, and i am sharing it with you fluffies exactly as i use them <sub>🗝</sub>
 you are free to use them as you personally like, and modify according to your preferences. if you have some practice with css it should be enough for changing colors, images, or removing some stuff i did. feel free to experiment around !!
