--- a/faq.html
+++ b/faq.html
@@ -847,7 +847,7 @@ i can still like posts normally, comment on them, and check my own notifications
 
 i made scripts for all the social media sites that i use / have used.
 each one of them has a slightly different appearance ( i customized them very spontaneously ) , but all of them have the metric numbers and public comments hidden, and some other things as well ( such as trending posts ) .
-i will keep my web code snippets updated whenever needed, and you can always check the latest version on my /portfolio page !
+i will keep my web code snippets updated whenever needed, and you can always check the latest version on my <a style="text-decoration: none;" href="https://middlepot.com/portfolio#webcodesnippets" target="_blank"><font color="#ccb1b1" style="border-bottom:1px dashed #ccb1b1; padding-bottom: 0px; font-size:10px;">portfolio</font></a> page !
 
 keep in mind that these codes were made by me, thinking on my own needs, and i am sharing it with you fluffies exactly as i use them.
 you are free to use them as you personally like, and modify according to your preferences. if you have some practice with css it should be enough for changing colors, images, or removing some stuff i did. feel free to experiment around !!
