--- a/portfolio.html
+++ b/portfolio.html
@@ -340,6 +340,16 @@ position: absolute;
 overflow-y:hidden;
 overflow-x:hidden;
  }
+#base2 {
+position: absolute;
+	left: 13%;
+	top: 10%;
+width: 935px;
+height: 540px;
+overflow-y:hidden;
+overflow-x:hidden;
+z-index: 5;
+ }
 #menu1 {
 position: absolute;
 	left: %;
@@ -348,7 +358,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 8;
  }
 #menu1-2 {
 position: absolute;
@@ -358,7 +368,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 9;
  }
 #menu2 {
 position: absolute;
@@ -368,7 +378,7 @@ width: 560px;
 height: 35px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 4;
+z-index: 10;
  }
 #menu3 {
 position: absolute;
@@ -378,7 +388,7 @@ width: 130px;
 height: 250px;
 overflow-y:hidden;
 overflow-x:hidden;
-z-index: 2;
+z-index: 11;
  }
 #stuff {
 position: absolute;
@@ -387,7 +397,7 @@ position: absolute;
 width: 594px;
 height: 433px;
 overflow-x:hidden;
-z-index: 6;
+z-index: 10;
  }
 #aaa {
 position: absolute;
@@ -396,7 +406,7 @@ position: absolute;
 width: 100px;
 height: 100px;
 overflow-x:hidden;
-z-index: 3;
+z-index: 11;
  }
 @media screen and (max-width: 1000px) and (orientation: portrait){
 #everything { position: absolute; zoom: 155%;
@@ -460,8 +470,9 @@ z-index: 3;
 <div id="menu3">
 <br><br>
 　　　　　 <a href="/blog" style="text-decoration: none; color:#b29487;">my blog</a>
-</div>
+</div></div>
 
+<div id="base2">
 <div id="stuff">
 
 <div style="background-image:url(https://i.imgur.com/x9mxyB4.png); width: 594px; height: 433px; color: #BC9F9F; overflow-x: hidden; overflow: auto; overflow: scroll; text-align:justify ; font-family: Verdana; font-size:9px; line-height: 100%">
@@ -477,10 +488,10 @@ z-index: 3;
 <center><img width="100px" height="auto" src="https://i.imgur.com/9qg5UDg.png"></center><br>
 <center><font color="#bca9a9">melissa cavalcante assolari | august 11, 1997 <br>degree in game design | artist ♡ crafter ♡ designer </font></center>
 <center>
-<br><br><font color="#9c8c7e">( <a id="linkbjinho" style="text-decoration: none;" href="https://middlepot.com/cv.pdf" target="_blank"><font color="#9c8c7e">middlepot's cv</font></a> )</font><br><br><br>
+<br><br><font color="#9c8c7e">( <a id="linkbjinho" style="text-decoration: none;" href="https://middlepot.com/cv.pdf" target="_blank"><font color="#9c8c7e">middlepot's cv</font></a> )</font><br><br>
 
+<div style="line-height:3px;"><br><br><br><a name="webdesign" id="webdesign"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png">
-
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web design ..<br><br></font><br>
 <a href="https://1997.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/tZoOsJi.gif"></a><br><br>
@@ -489,10 +500,10 @@ z-index: 3;
 <a href="https://2006.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
 <a href="https://pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/jpdAYT4.gif"></a><br><br>
 <a href="https://ch.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a>
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="needlefelting" id="needlefelting"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
-
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ needle felting ..<br><br></font><br><br>
@@ -503,7 +514,8 @@ z-index: 3;
 <img width="auto" height="170px" src="https://i.imgur.com/qunDIJU.png"><br><br>
 <img width="auto" height="280px" src="https://i.imgur.com/JsN6EKu.png">　
 <img width="auto" height="280px" src="https://i.imgur.com/C3Jv1i8.png">
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="gamedesign" id="gamedesign"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -701,6 +713,7 @@ function resetPlayer() {
 		</div></center>
 <br>
 <br><br>
+<div style="line-height:3px;"><br><br><br><a name="digitaldrawing" id="digitaldrawing"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -712,7 +725,8 @@ function resetPlayer() {
 <img width="auto" height="180px" src="https://i.imgur.com/SoiKb3i.png"><br><br>
 <img width="auto" height="180px" src="https://i.imgur.com/oIj1rBe.png"><br><br>
 <img width="auto" height="180px" src="https://i.imgur.com/hSK8UjC.png">
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="collaging" id="collaging"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -724,7 +738,8 @@ function resetPlayer() {
 <img width="400px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
 <img width="190px" height="auto" src="https://i.imgur.com/I5f33J8.png"> <img width="190px" height="auto" src="https://i.imgur.com/QApSfkU.png"><br><br>
 <img width="190px" height="auto" src="https://i.imgur.com/PeQffP8.png"> <img width="190px" height="auto" src="https://i.imgur.com/LzXVDMA.png">
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="sewing" id="sewing"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -737,7 +752,8 @@ function resetPlayer() {
 <img width="320px" height="auto" src="https://i.imgur.com/9pKl1Er.jpg"><br><br>
 <img width="auto" height="280px" src="https://i.imgur.com/laqU3ts.jpg">
 <img width="auto" height="280px" src="https://i.imgur.com/Ynd8fVf.jpg"><br><br>
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="asciiart" id="asciiart"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -750,7 +766,8 @@ function resetPlayer() {
 <img src="https://i.imgur.com/QgQSreB.png">
 <img src="https://i.imgur.com/Vymk0Bi.png"><br><br>
 <img src="https://i.imgur.com/px7ebRm.png">
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="photography" id="photography"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -758,15 +775,17 @@ function resetPlayer() {
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ photography ..<br><br>
 <br><br>
-<img src="https://i.imgur.com/X1NeZoO.png"><br><br><br><br>
+<img src="https://i.imgur.com/X1NeZoO.png"><br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="fontdesign" id="fontdesign"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
 
 
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ fonts ..<br><br>
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ font design ..<br><br>
 <a href="https://file.pooftie.me/r/puf.rar" target="_blank"><img src="https://i.imgur.com/GX3SbKH.png"></a>
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="digitalcoloring" id="digitalcoloring"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -797,7 +816,8 @@ function resetPlayer() {
         </script><br><br>
 <a href="https://uwuboa.neocities.org" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/isntZyi.png"></a><br><br>
 <a href="https://www.instagram.com/lambmaid/" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/joZ4qMw.png"></a><br><br>
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="compositing" id="compositing"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -806,7 +826,8 @@ function resetPlayer() {
 <sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/tiptoes.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
 <sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
 <sub><img src="https://i.imgur.com/0iG1uGb.png"></sub> <a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
-<br><br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="embroidery" id="embroidery"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -820,7 +841,8 @@ function resetPlayer() {
 <img width="280px" height="auto" src="https://i.imgur.com/EahGtcV.gif">
 <br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/OLF2amH.gif">
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="videoediting" id="videoediting"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -1014,7 +1036,8 @@ function resetPlayer2() {
 			<button id='mute-button2' class='mute' title="mute" onclick='toggleMute2("true");'/>
 		</div>
 	</div>
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="webmaterials" id="webmaterials"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -1026,17 +1049,18 @@ function resetPlayer2() {
 <img width="auto" height="60" src="https://i.imgur.com/BfaeeOr.png">　<img width="auto" height="60"src="https://i.imgur.com/LsU4gDg.png"><br><br>
 <img width="110" height="auto" src="https://i.imgur.com/9KEGT4h.png"><br><br>
 <img width="60" height="auto" src="https://i.imgur.com/9oEnG7a.png"> <img width="60" height="auto" src="https://i.imgur.com/SVN746x.png"> <img width="60" height="auto" src="https://i.imgur.com/8VD9uSz.png">
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="webcodesnippets" id="webcodesnippets"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web code snippets ..<br><br></font>
 <font style="font-size: 8px;" color="#b38d94"><br>
-( click the screenshots to get the .txt files )
+( click the screenshots to get the .js files )
 </font>
 <br><br><br>
-<a href="https://file.pooftie.me/js/tmblr.txt" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/AqVXPvO.png"/></a>
+<a href="https://file.pooftie.me/js/tmblr.js" target="_blank" id="linkzinhoinho"><img id="tmblr" width="400px" height="auto" src="https://i.imgur.com/AqVXPvO.png"/></a>
         <script type = "text/javascript">
             var imagetmblr = document.getElementById("tmblr");
             var currentPostmblr = 0;
@@ -1052,7 +1076,7 @@ function resetPlayer2() {
             setInterval(volgendefototmblr, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/yt.txt" target="_blank" id="linkzinhoinho"><img id="yt" width="400px" height="auto" src="https://i.imgur.com/RJNCZse.png"/></a>
+<a href="https://file.pooftie.me/js/yt.js" target="_blank" id="linkzinhoinho"><img id="yt" width="400px" height="auto" src="https://i.imgur.com/RJNCZse.png"/></a>
         <script type = "text/javascript">
             var imageyt = document.getElementById("yt");
             var currentPosyt = 0;
@@ -1068,7 +1092,7 @@ function resetPlayer2() {
             setInterval(volgendefotoyt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/twt.txt" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/DSmMqN5.png"/></a>
+<a href="https://file.pooftie.me/js/twt.js" target="_blank" id="linkzinhoinho"><img id="twt" width="400px" height="auto" src="https://i.imgur.com/DSmMqN5.png"/></a>
         <script type = "text/javascript">
             var imagetwt = document.getElementById("twt");
             var currentPostwt = 0;
@@ -1084,7 +1108,7 @@ function resetPlayer2() {
             setInterval(volgendefototwt, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/ig.txt" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/5FvB3pk.png"/></a>
+<a href="https://file.pooftie.me/js/ig.js" target="_blank" id="linkzinhoinho"><img id="ig" width="400px" height="auto" src="https://i.imgur.com/5FvB3pk.png"/></a>
         <script type = "text/javascript">
             var imageig = document.getElementById("ig");
             var currentPosig = 0;
@@ -1100,7 +1124,7 @@ function resetPlayer2() {
             setInterval(volgendefotoig, 1000);
         </script><br><br><br>
 
-<a href="https://file.pooftie.me/js/dscrd.txt" target="_blank"><img id="dscrd" width="400px" height="auto" src="https://i.imgur.com/LghKMB0.png"></a>
+<a href="https://file.pooftie.me/js/dscrd.js" target="_blank"><img id="dscrd" width="400px" height="auto" src="https://i.imgur.com/LghKMB0.png"></a>
         <script type = "text/javascript">
             var imagedscrd = document.getElementById("dscrd");
             var currentPosdscrd = 0;
@@ -1115,9 +1139,10 @@ function resetPlayer2() {
 
             setInterval(volgendefotodscrd, 1000);
         </script>
-<br><br><br><a id="linkbjinho" href="https://file.pooftie.me/js/dscrdcss.txt" target="_blank">( click here to get the css only version, for betterdiscord )</a>
+<br><br><br><a id="linkbjinho" href="https://file.pooftie.me/js/dscrd.css" target="_blank">( click here to get the .css version, for betterdiscord )</a>
 
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="3Dmodeling" id="3Dmodeling"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
@@ -1136,14 +1161,15 @@ function resetPlayer2() {
 <div style="border: none; width: 400px; height: 400px; overflow:hidden;">
 <model-viewer onclick="dismissPoster();" reveal="manual" style="overflow:hidden; --progress-bar-color:#d1b0b2; --progress-bar-height:2px; --poster-color:transparent; top:-120px; left:-140px; border:none; width:650px; height:650px;" src="https://file.pooftie.me/m/teddy.glb" environment-image="https://i.imgur.com/YqBKGCz.jpg" poster="https://i.imgur.com/q5eKeWy.png" exposure="1.2" data-js-focus-visible camera-controls></model-viewer>
 </div>
-<br><br><br><br>
+<br><br><br>
+<div style="line-height:3px;"><br><br><br><a name="devicecustomization" id="devicecustomization"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
 
 
 
 
-<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ pc & mobile customization ..<br><br></font><br><br>
+<br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ device customization ..<br><br></font><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/UWpbSxc.gif"><br><br>
 <img id="laptop" width="auto" height="250px" src="https://i.imgur.com/9SX9ngJ.jpg">
 </img>
@@ -1196,7 +1222,7 @@ function resetPlayer2() {
 </div>
 
 
-
+</div>
 </div>
 </body>
 
