--- a/portfolio.html
+++ b/portfolio.html
@@ -783,7 +783,7 @@ function resetPlayer() {
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ font design ..<br><br>
-<a href="https://file.pooftie.me/r/puf.rar" target="_blank"><img src="https://i.imgur.com/GX3SbKH.png"></a>
+<a href="https://file.pooftie.me/zip/puf.zip" target="_blank"><img src="https://i.imgur.com/GX3SbKH.png"></a>
 <br><br><br>
 <div style="line-height:3px;"><br><br><br><a name="digitalcoloring" id="digitalcoloring"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
