--- a/gaming.html
+++ b/gaming.html
@@ -492,7 +492,7 @@ z-index: 3;
 <sub><sub><sub><img src="https://i.imgur.com/Y8IvPGs.png"></sub></sub></sub>
 <font color="#a8958d">　<b>ragnarok online</b><br>
 　　　official br server : thor<br>
-　　　ui skin : <a href="https://file.pooftie.me/r/rosemilktea.rar" target="_blank"><font color="#b08087">rosemilktea.rar</font></a></font><br><br><br>
+　　　ui skin : <a href="https://file.pooftie.me/zip/rosemilktea.zip" target="_blank"><font color="#b08087">rosemilktea.zip</font></a></font><br><br><br>
 
 <div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border-style: solid; border-width: 20px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 360px; height: 140px; line-height:10px; padding:5px;">
 <img style="position:absolute; left:5px;" src="https://i.imgur.com/vA6cZGh.gif"><img style="position:absolute; left:80px; top:105px;" src="https://i.imgur.com/83XdPpp.png">
