--- a/faq.html
+++ b/faq.html
@@ -71,7 +71,7 @@ border: 1px dotted #e2d5d0;
 <!--
 tooooooooltip
 -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://file.pooftie.me/js/jquery.js"></script>
 
 <script>
 (function($){
@@ -323,7 +323,7 @@ menuuuuuuuuuuuuuuu
 -->
 
 <!--   ・゜ ♡   emoji set code   ♡ ゜ ・  -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://file.pooftie.me/js/jquery.js"></script>
 <script src="https://middlepot.com/emoji.js"></script>
 <!--   © middlepot.com  ꒰ ू´ ˘ ` ू ꒱  -->
 
