--- a/recommended.html
+++ b/recommended.html
@@ -71,7 +71,7 @@ border: 1px dotted #e2d5d0;
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://file.pooftie.me/js/jquery.js"></script>
 
 </head>
 
