--- a/milkywoods.html
+++ b/milkywoods.html
@@ -81,7 +81,7 @@ border: 1px dotted #e2d5d0;
 tooooooooltip
 -->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="https://file.pooftie.me/js/jquery.js"></script>
 
 <script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
 
