--- a/help.html
+++ b/help.html
@@ -600,10 +600,12 @@ function getPosition(el) {
 }
 </script>
 
+<div style="position:absolute; left:350px; top:415px;"><font color="#c4a7a5" style="font-size:10px;">↑ </font><a id="linkbjinho" href="#top" style="text-decoration:none;"><font color="#d1b6b4" style="font-size:8px;">scroll back to the top</font></a></div>
+
 <div style="padding-left: 22%; padding-right: 25%;">
 
-<div id="stuff2" style="top:85px; padding: 20px; position: absolute; width: 300px; height: 300px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 130%">
-
+<div id="stuff2" style="top:85px; padding: 20px; position: absolute; width: 300px; height: 290px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 130%">
+<a name="top" id="top"></a>
 <style>
 #linklinklink { color: #d39aab; }
 #linkkkkkkkk { color: #e8aebf; }
@@ -1345,7 +1347,7 @@ function getPosition(el) {
 <font color="#b78f8f">
 <font size="1">※</font> do you have something important to add ? contact me <a style="color:#b78f8f;" href="/contact">here</a> !<br>
 <font size="1">※</font> tell your friends about this page and help other people.</font>
-<br><br>
+
 
 </div>
 
