--- a/fashion.html
+++ b/fashion.html
@@ -622,6 +622,8 @@ p { margin: 0; }
 
 <img width="300px" height="auto" src="https://file.pooftie.me/f/0.jpg"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/01.jpg"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/1.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/2.jpg"/><br><br>
@@ -646,7 +648,11 @@ p { margin: 0; }
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/8.jpg"/><br><br>
 <br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/0009.jpg"/><br><br>
+<br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/009.jpg"/><br><br>
+<br>
+<img width="300px" height="auto" src="https://file.pooftie.me/f/09.jpg"/><br><br>
 <br>
 <img width="300px" height="auto" src="https://file.pooftie.me/f/9.jpg"/><br><br>
 <br>
