--- a/portfolio.html
+++ b/portfolio.html
@@ -496,6 +496,7 @@ z-index: 11;
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web design ..<br><br></font><br>
 <a href="https://1997.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/tZoOsJi.gif"></a><br><br>
 <a href="https://shybunny.store" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
+<a href="https://base.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/R2Ec5Oj.png"></a><br><br>
 <a href="https://care.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/3zK3gTz.gif"></a><br><br>
 <a href="https://2006.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
 <a href="https://pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/jpdAYT4.gif"></a><br><br>
@@ -746,10 +747,10 @@ function resetPlayer() {
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ sewing ..<br><br></font><br><br>
-<img width="320px" height="auto" src="https://i.imgur.com/rbrkEHH.jpg"><br><br>
-<img width="320px" height="auto" src="https://i.imgur.com/ep4ENU6.jpg"><br><br>
-<img width="320px" height="auto" src="https://i.imgur.com/l6QyZw0.jpg"><br><br>
-<img width="320px" height="auto" src="https://i.imgur.com/9pKl1Er.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/rbrkEHH.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/tLGajfV.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/l6QyZw0.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/9pKl1Er.jpg"><br><br>
 <img width="auto" height="280px" src="https://i.imgur.com/laqU3ts.jpg">
 <img width="auto" height="280px" src="https://i.imgur.com/Ynd8fVf.jpg"><br><br>
 <br><br><br>
@@ -775,7 +776,7 @@ function resetPlayer() {
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ photography ..<br><br>
 <br><br>
-<img src="https://i.imgur.com/X1NeZoO.png"><br><br><br>
+<img src="https://i.imgur.com/Kz7jKQj.png"><br><br><br>
 <div style="line-height:3px;"><br><br><br><a name="fontdesign" id="fontdesign"></a></div>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
