--- a/blog.html
+++ b/blog.html
@@ -499,18 +499,19 @@ i know i know, it's not possible to be sure of what will happen until then,, but
 lately i have been feeling quite healthy, which is great !!
 i'm full of energy, and because of that i have been able to be very productive without pushing myself beyond my limits <sub>⭐</sub>
 
-i have also been deep into nostalgia these days, because of all things i have worked on !
+i have also been going deep into nostalgia these days, because of all things i have worked on !
 i think nostalgia is a huge part of who i am, i find so much joy when digging through stuff from the past .. so i'm happy to do things that allow me to express this, and share a bit of how i feel with others <sub>🌈</sub>
+
 this is a very special time of the year for me because august is the month of my birthday, the <font color="#bfa8a8">middlepot.com</font> anniversary, and then september there is also the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> anniversary !!
-i can’t believe i’ve been running this game for almost one year already .. 1 year old <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i can't believe i've been running this game for almost one year already .. a 1 year old baby <font color="#d3a5a5" style="font-size:11px;">♡</font>
 and the <font color="#bfa8a8">middlepot.com</font> website itself is already going to become 5 years old, woa !
 the <a id="linkbjinho" href="https://poofties.club" target="_blank">poofties franchise</a> itself could also be considered 5 years old, maybe ??
 it was officially released by 2017 too, but i was already developing the concepts & characters since 2013 ( the year i started dating bubu <font color="#d3a5a5" style="font-size:11px;">♡</font> ) and released the first game by 2015, so mm.. i think it is way older than that.
 i am pretty old myself, right ? i will turn 25 years by august 11 <sub>🎀</sub>
 my only current project that is a bit of an outsider is the <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a>, that will turn 4 years old by november, but i renewed the layout last year by august as well LOL
 
-it’s not even on purpose, but yea, this is a commemorative season for me, so i wanted to include concepts of that into the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> summer season by adding a new laptop shop called the "pool party store", and a cute upbeat music on the new mini game on the swimming pool area !
-i’m going to show you, as always, some screenshots of the new stuff :</pre>
+it's not even on purpose, but yea, this is a commemorative season for me, so i wanted to include concepts of that into the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> summer season by adding a new laptop shop called the "pool party store", and a cute upbeat music on the new mini game on the swimming pool area !
+i'm going to show you, as always, some screenshots of the new stuff :</pre>
 <br><br>
 
 <center><img id="summer2022" width="430px" height="auto" src="https://i.imgur.com/CfJYnsQ.png">
@@ -630,7 +631,7 @@ most of all, it really inspired me for something i'm going to do on <a id="linkb
 by mid september i want to make an anniversary event with lots of cute & colorful gifts, balloons, fireworks, and bonus teddycoins <sub>💕</sub>
 ( i won't spoiler you anymore, but it will have a similar feeling to the drawing )
 
-i’m so happy to see that many people are still playing my game since it got released, and many more are registering accounts to this day !!!
+i'm so happy to see that many people are still playing my game since it got released, and many more are registering accounts to this day !!!
 being able to share this little world with you fluffies is a dream coming true, really, and i still have a hard time believing this is real ..
 every new character, every message exchanged, every gift coupon generated - it is all unbelievably wonderful !
 i would like to share a bit of this magical feeling with you, so i will do my best to make it a memorable event. <sub>⭐</sub>
